4. the course end

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "Dart & Flutter",
             "request": "launch",
             "type": "dart",
-            "program": "episode2/switch_using.dart",
-            
+            "program": "${file}",
+            "console":"terminal",
             
         }
     ]
